# kite

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md  temp.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
.github/workflows/: RELEASE-PROCESS.md  docs.yml  release.yml
devcontainer-template/: Dockerfile  README.md  devcontainer.json  post-create.sh  post-start.sh
docs/: README.md  devcontainer.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
docs/community/: friends.md  presets.md  walkthroughs.md
docs/reference/: core.md  extensions.md  integrations.md  overview.md  presets.md  workflows.md
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json
extensions/git/: README.md  config-template.yml  extension.yml
extensions/selftest/: extension.yml
extensions/template/: CHANGELOG.md  EXAMPLE-README.md  README.md  config-template.yml  extension.yml
integrations/: CONTRIBUTING.md  README.md  catalog.json
newsletters/: 2026-February.md  2026-March.md
next-steps/: plan.md  spec.md  tasks.md
presets/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json
presets/lean/: README.md  preset.yml
scripts/: install-devcontainer.sh
templates/: checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
tests/: __init__.py  conftest.py  test_agent_config_consistency.py  test_backend_contract_gate.py  test_branch_numbering.py  test_check_tool.py  test_cli_version.py  test_constitution_templates.py  test_dev_environment_guard.py  test_devcontainer_bootstrap.py  test_extension_skills.py  test_extensions.py  test_kite_cli_phase4.py  test_kite_workflow.py  test_merge.py  test_presets.py  test_registrar_path_traversal.py  test_setup_plan_feature_json.py  test_tasks_generation_templates.py  test_timestamp_branches.py  test_upgrade.py  test_workflows.py
workflows/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.json
(+106 files in other folders)
