[project]
name = "kite-cli"
version = "0.7.2"
description = "Kite CLI — a guided SDLC workflow for non-technical builders. Forked from GitHub Kite."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
    "click>=8.2.1",
    "rich",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "pathspec>=0.12.0",
    "json5>=0.13.0",
]

[project.scripts]
kite = "kite_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kite_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle core assets so `specify init` works without network access (air-gapped / enterprise)
# Page templates (exclude commands/ — bundled separately below to avoid duplication)
"templates/checklist-template.md" = "kite_cli/core_pack/templates/checklist-template.md"
"templates/constitution-template.md" = "kite_cli/core_pack/templates/constitution-template.md"
"templates/plan-template.md" = "kite_cli/core_pack/templates/plan-template.md"
"templates/spec-template.md" = "kite_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "kite_cli/core_pack/templates/tasks-template.md"
"templates/vscode-settings.json" = "kite_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/commands" = "kite_cli/core_pack/commands"
"scripts/bash" = "kite_cli/core_pack/scripts/bash"
"scripts/powershell" = "kite_cli/core_pack/scripts/powershell"
# Bundled extensions (installable via `specify extension add <name>`)
"extensions/git" = "kite_cli/core_pack/extensions/git"
# Bundled workflows (auto-installed during `specify init`)
"workflows/kite" = "kite_cli/core_pack/workflows/kite"
# Bundled presets (installable via `specify preset add <name>` or `specify init --preset <name>`)
"presets/lean" = "kite_cli/core_pack/presets/lean"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

